# fann

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  biicode.conf  ci.sh  format.sh  ignore.bii  index.html
.github/workflows/: ci.yml
VS2010/: fann.sln  fann_tests.sln
VS2010/cascade_train/: cascade_train.vcxproj  cascade_train.vcxproj.filters
VS2010/fanndouble/: fanndouble.vcxproj  fanndouble.vcxproj.filters
VS2010/fannfixed/: fannfixed.vcxproj
VS2010/fannfloat/: fannfloat.vcxproj  fannfloat.vcxproj.filters
VS2010/gtest/: gtest.vcxproj  gtest.vcxproj.filters
VS2010/momentums/: momentums.vcxproj  momentums.vcxproj.filters
VS2010/mushroom/: mushroom.vcxproj  mushroom.vcxproj.filters
VS2010/parallel_train/: parallel_train.vcxproj  parallel_train.vcxproj.filters
VS2010/robot/: robot.vcxproj  robot.vcxproj.filters
VS2010/scaling_test/: scaling_test.vcxproj  scaling_test.vcxproj.filters
VS2010/scaling_train/: scaling_train.vcxproj  scaling_train.vcxproj.filters
VS2010/simple_train_double/: simple_train_double.vcxproj  simple_train_double.vcxproj.filters
VS2010/simple_train_float/: simple_train_float.vcxproj
VS2010/steepness_train/: steepness_train.vcxproj  steepness_train.vcxproj.filters
VS2010/tests_float/: tests_float.vcxproj  tests_float.vcxproj.filters
VS2010/xor_cpp_sample/: xor_cpp_sample.vcxproj  xor_cpp_sample.vcxproj.filters
VS2010/xor_test_fixed/: xor_test_fixed.vcxproj  xor_test_fixed.vcxproj.filters
VS2010/xor_test_float/: xor_test_float.vcxproj
VS2010/xor_train/: xor_train.vcxproj  xor_train.vcxproj.filters
cmake/: FANNConfig.cmake.in  FANNConfigVersion.cmake.in  config.h.cmake  config.h.in  doublefann.pc.cmake  fann-config.cmake.in  fann-use.cmake  fann.pc.cmake  fixedfann.pc.cmake  floatfann.pc.cmake
cmake/Modules/: DefineInstallationPaths.cmake
datasets/: abelone.test  abelone.train  bank32fm.test  bank32fm.train  bank32nh.test  bank32nh.train  building.test  building.train  census-house.test  census-house.train  diabetes.test  diabetes.train  gene.test  gene.train  kin32fm.test  kin32fm.train  mushroom.test  mushroom.train  parity13.test  parity8.test  parity8.train  pumadyn-32fm.test  pumadyn-32fm.train  robot.test  robot.train  scaling.data  soybean.test  soybean.train  thyroid.test  thyroid.train  two-spiral.test  two-spiral.train
docs/: generate_docs.sh  index.html  publish_docs.sh
docs/NaturalDocs-1.52/: NaturalDocs
docs/NaturalDocs-1.52/Config/: Languages.txt  Topics.txt
docs/NaturalDocs-1.52/Help/: index.html
docs/NaturalDocs-1.52/Modules/NaturalDocs/: BinaryFile.pm  ClassHierarchy.pm  ImageReferenceTable.pm  Languages.pm  LineReader.pm  Menu.pm  Project.pm  ReferenceString.pm  Settings.pm  SymbolString.pm  SymbolTable.pm  Topics.pm
docs/NaturalDocs-1.52/Modules/NaturalDocs/ImageReferenceTable/: String.pm
docs/files/: fann-h.html  fann_cascade-h.html  fann_cpp-h.html  fann_data-h.html  fann_data_cpp-h.html  fann_error-h.html  fann_io-h.html  fann_train-h.html  fann_training_data_cpp-h.html
docs/index/: Classes.html  Constants.html  Functions.html  Functions2.html  Functions3.html  Functions4.html  Functions5.html  General.html  General2.html  General3.html  General4.html  General5.html  Types.html
docs/javascript/: searchdata.js
docs/prj/: Menu.txt
docs/search/: ClassesF.html  ClassesN.html  ClassesS.html  ClassesT.html  ConstantsE.html  ConstantsF.html  ConstantsL.html  ConstantsS.html  ConstantsT.html  FunctionsC.html  FunctionsD.html  FunctionsE.html  FunctionsF.html  FunctionsI.html  FunctionsL.html  FunctionsM.html  FunctionsN.html  FunctionsP.html  FunctionsR.html  FunctionsS.html  FunctionsT.html  GeneralA.html  GeneralC.html  GeneralE.html  GeneralF.html  GeneralG.html  GeneralL.html  GeneralN.html  GeneralP.html  GeneralR.html  GeneralS.html  GeneralT.html  TypesA.html  TypesC.html  TypesE.html  TypesF.html  TypesN.html  TypesS.html  TypesT.html
examples/: .gitignore  Makefile  cascade_train.c  mkfile  momentums.c  mushroom.c  nn-benchmark.c  parallel_train.c  robot.c  run-it  scaling.data  scaling_test.c  scaling_train.c  simple_test.c  simple_train.c  steepness_train.c  xor_sample.cpp  xor_test.c  xor_train.c
include/fann/: doublefann.h  fann.h  fann_activation.h  fann_internal.h  fann_training_data_cpp.h  fixedfann.h  floatfann.h
lib/gtest-1.6.0/msvc/: gtest.sln
src/: CMakeLists.txt  Makefile.am  Makefile.in  doublefann.c  fann.c  fann_cascade.c  fann_error.c  fann_io.c  fann_train.c  fann_train_data.c  fixedfann.c  floatfann.c  mkfile  myduplo.sh  parallel_doublefann_cpp.cpp  parallel_fann.c  parallel_fann_cpp.cpp  parallel_floatfann_cpp.cpp
src/include/: CMakeLists.txt  Makefile.am  Makefile.in  compat_time.h  config.h  doublefann.h  fann.h  fann_activation.h  fann_cascade.h  fann_cpp.h  fann_data.h  fann_data_cpp.h  fann_error.h  fann_internal.h  fann_io.h  fann_train.h  fann_training_data_cpp.h  fixedfann.h  floatfann.h  parallel_fann.h  parallel_fann.hpp
tests/: CMakeLists.txt  create_net.cpp  fann_test.cpp  fann_test.h  fann_test_data.cpp  fann_test_data.h  fann_test_train.cpp  fann_test_train.h  fann_tests.cpp  gputest.c  train_data.cpp  xortest.c
