FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
  OPTION(DISABLE_PARALLEL_FANN "Disable parallel fann functions" OFF)
ENDIF(OPENMP_FOUND)

IF(NOT OPENMP_FOUND OR DISABLE_PARALLEL_FANN)
  ADD_DEFINITIONS(-DDISABLE_PARALLEL_FANN)
ELSE()
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
ENDIF(NOT OPENMP_FOUND OR DISABLE_PARALLEL_FANN)

ADD_SUBDIRECTORY( include ) 

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/include)
ADD_DEFINITIONS(-D_REENTRANT)
if (WIN32)
ADD_DEFINITIONS(-DFANN_DLL_EXPORTS)
endif (WIN32)
########### next target ###############

SET(floatfann_LIB_SRCS
floatfann.c
parallel_floatfann_cpp.cpp
)

ADD_LIBRARY(floatfann ${floatfann_LIB_SRCS})

SET_TARGET_PROPERTIES(floatfann PROPERTIES VERSION ${FANN_VERSION_STRING} SOVERSION ${FANN_VERSION_MAJOR})
INSTALL(TARGETS floatfann LIBRARY DESTINATION ${LIB_INSTALL_DIR}
                          ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
                          RUNTIME DESTINATION ${BIN_INSTALL_DIR} )


########### next target ###############

SET(doublefann_LIB_SRCS
doublefann.c
parallel_doublefann_cpp.cpp
)

ADD_LIBRARY(doublefann ${doublefann_LIB_SRCS})

SET_TARGET_PROPERTIES(doublefann PROPERTIES VERSION ${FANN_VERSION_STRING} SOVERSION ${FANN_VERSION_MAJOR})
INSTALL(TARGETS doublefann LIBRARY DESTINATION ${LIB_INSTALL_DIR}
                           ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
                           RUNTIME DESTINATION ${BIN_INSTALL_DIR} )


########### next target ###############

SET(fixedfann_LIB_SRCS
fixedfann.c
)

ADD_LIBRARY(fixedfann ${fixedfann_LIB_SRCS})

if(NOT WIN32)
	TARGET_LINK_LIBRARIES(fixedfann m)
endif()

SET_TARGET_PROPERTIES(fixedfann PROPERTIES VERSION ${FANN_VERSION_STRING} SOVERSION ${FANN_VERSION_MAJOR})
INSTALL(TARGETS fixedfann LIBRARY DESTINATION ${LIB_INSTALL_DIR}
                          ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
                          RUNTIME DESTINATION ${BIN_INSTALL_DIR} )


########### next target ###############

SET(fann_LIB_SRCS
floatfann.c
parallel_floatfann_cpp.cpp
)

ADD_LIBRARY(fann ${fann_LIB_SRCS})

if(NOT WIN32)
	TARGET_LINK_LIBRARIES(fann m)
endif()

SET_TARGET_PROPERTIES(fann PROPERTIES VERSION ${FANN_VERSION_STRING} SOVERSION ${FANN_VERSION_MAJOR})
INSTALL(TARGETS fann LIBRARY DESTINATION ${LIB_INSTALL_DIR}
                     ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
                     RUNTIME DESTINATION ${BIN_INSTALL_DIR} )

